# aoc2020

./: aoc2020.cabal  hie.yaml  stack.yaml
src/: Aoc.hs  Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
