name:                aoc2020
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/aoc2020#readme
license:             BSD3
license-file:        LICENSE
author:              Tomas Stenlund
maintainer:          tomas.stenlund@telia.com
copyright:           2020 Tomas Stenlund
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable aoc2020
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Aoc,
    Day1,
    Day2,
    Day3,
    Day4,
    Day5
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , containers
    , split
    , cond
    , matrix
